logs/mulib.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './include/site'...
Listing './include/site/python3.5'...
Listing './include/site/python3.5/greenlet'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/enum'...
Listing './lib/python3.5/site-packages/enum34-1.1.6.dist-info'...
Listing './lib/python3.5/site-packages/eventlet'...
Listing './lib/python3.5/site-packages/eventlet/green'...
Listing './lib/python3.5/site-packages/eventlet/green/OpenSSL'...
Listing './lib/python3.5/site-packages/eventlet/green/http'...
Listing './lib/python3.5/site-packages/eventlet/green/urllib'...
Listing './lib/python3.5/site-packages/eventlet/greenio'...
Listing './lib/python3.5/site-packages/eventlet/hubs'...
Listing './lib/python3.5/site-packages/eventlet/support'...
Listing './lib/python3.5/site-packages/eventlet/support/dns'...
Listing './lib/python3.5/site-packages/eventlet/support/dns/rdtypes'...
Listing './lib/python3.5/site-packages/eventlet/support/dns/rdtypes/ANY'...
Listing './lib/python3.5/site-packages/eventlet/support/dns/rdtypes/IN'...
Listing './lib/python3.5/site-packages/eventlet/zipkin'...
Listing './lib/python3.5/site-packages/eventlet/zipkin/_thrift'...
Listing './lib/python3.5/site-packages/eventlet/zipkin/_thrift/zipkinCore'...
Listing './lib/python3.5/site-packages/eventlet-0.22.0.dist-info'...
Listing './lib/python3.5/site-packages/greenlet-0.4.12.dist-info'...
Listing './lib/python3.5/site-packages/mulib'...
Compiling './lib/python3.5/site-packages/mulib/caps.py'...
***   File "./lib/python3.5/site-packages/mulib/caps.py", line 102
    print "Granted cap:", cap_key, private
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mulib/cgiadapter.py'...
***   File "./lib/python3.5/site-packages/mulib/cgiadapter.py", line 66
    print ''.join(traceback.format_exception(type, value, tb))
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mulib/eventrouter.py'...
***   File "./lib/python3.5/site-packages/mulib/eventrouter.py", line 63
    except socket.error, (errno, reason):
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mulib/mu.py'...
***   File "./lib/python3.5/site-packages/mulib/mu.py", line 70
    raise AttributeError, name
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mulib/mud.py'...
***   File "./lib/python3.5/site-packages/mulib/mud.py", line 53
    print "consume", segments
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mulib/pantheon.py'...
***   File "./lib/python3.5/site-packages/mulib/pantheon.py", line 113
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mulib/pantheon_test.py'...
***   File "./lib/python3.5/site-packages/mulib/pantheon_test.py", line 100
    print first_event
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mulib/proxy.py'...
***   File "./lib/python3.5/site-packages/mulib/proxy.py", line 160
    print to_log
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mulib/shaped.py'...
***   File "./lib/python3.5/site-packages/mulib/shaped.py", line 187
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mulib/stacked.py'...
***   File "./lib/python3.5/site-packages/mulib/stacked.py", line 325
    except (ImportError, AttributeError), e:
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mulib/stacked_test.py'...
***   File "./lib/python3.5/site-packages/mulib/stacked_test.py", line 231
    print out.read()
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mulib/tests.py'...
***   File "./lib/python3.5/site-packages/mulib/tests.py", line 118
    print "-=", test_file, "=-"
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mulib-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
